hacked in CMake support for Ogre 2.1 pso together with SDL2 from ogredeps (maybe also main 2.1) on VS 2015 --> MYGUI_RENDERSYSTEM 9 and MYGUI_SAMPLES_INPUT 4 - see new MYGUI_OGRE_21 pp define - see new OGRE_DEPS_SOURCE_DIR and OGRE_DEPS_BUILD_DIR CMake vars - many 2do to solve, eg. -- LayoutEditor still doesn't work

--- a/CMake/Templates/VisualStudioUserFile.vcproj.user.in
+++ b/CMake/Templates/VisualStudioUserFile.vcproj.user.in
@@ -20,7 +20,7 @@
 				HttpUrl=""
 				PDBPath=""
 				SQLDebugging=""
-				Environment=""
+				Environment="PATH=$(Path);@OGRE_DEBUG_DLLS_DIR@;@OGRE_DEPS_DEBUG_DLLS_DIR@"
 				EnvironmentMerge="true"
 				DebuggerFlavor="0"
 				MPIRunCommand=""
@@ -48,7 +48,7 @@
 				HttpUrl=""
 				PDBPath=""
 				SQLDebugging=""
-				Environment=""
+				Environment="PATH=$(Path);@OGRE_RELEASE_DLLS_DIR@;@OGRE_DEPS_RELEASE_DLLS_DIR@"
 				EnvironmentMerge="true"
 				DebuggerFlavor="0"
 				MPIRunCommand=""
